# distiller

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SPEC.md  config.example.yaml  db_copier.py  hashfiles.py  inventory.json  lang_detect.py  loader.py  main.py  merge_db.py  pyproject.toml  requirements.txt  requirements_unsloth.txt  text_detector.py
.github/workflows/: pypi-publish.yml
experiment/: text_get.py
lib/: TFIDFHelper.py  bloomfilter.py  utils.py
scripts/: big_bench_extractor.py  loader2.py  merge_db.py  test_openrouterai.py  token_count.py
src/distiller/: __init__.py  __main__.py
src/distiller/adapters/: __init__.py
src/distiller/cli/: __init__.py  commands.py
src/distiller/core/: __init__.py  config.py  tfidf.py
src/llm_distiller/: __main__.py
src/llm_distiller/adapters/: bloomfilter.py
src/llm_distiller/core/: config.py  utils.py
tests/: conftest.py  test_bloomfilter.py  test_tfidf.py  test_utils.py
